@@ -1153,7 +1153,7 @@ dln_strerror()
     char *p = message;
     p += sprintf(message, "%d: ", error);
     FormatMessage(
-	FORMAT_MESSAGE_FROM_SYSTEM,
+	FORMAT_MESSAGE_FROM_SYSTEM | FORMAT_MESSAGE_IGNORE_INSERTS,
 	NULL,
 	error,
 	MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT),
